--- a/src/templates/info.html
+++ b/src/templates/info.html
@@ -18,20 +18,6 @@
         <%= container.name %>
         <span class="u-text--muted p-text--small"><%= container.uptime %></span>
       </h3>
-      <div class="info">
-        <div class="attributes">
-          <% attributes(container, image) do |title, value| %>
-            <button class="p-chip is-dense">
-              <span class="p-chip__lead"><%= title %></span>
-              <% if value.is_a? Time %>
-                <span class="p-chip__value"><time datetime="<%= value.to_iso8601 %>"></time></span>
-              <% else %>
-                <span class="p-chip__value"><%= value %></span>
-              <% end %>
-            </button>
-          <% end %>
-        </div>
-      </div>
 
       <div class="labels">
         <% container.labels.each do |label| %>
@@ -40,12 +26,27 @@
           </button>
         <% end %>
       </div>
+
+      <div class="attributes">
+        <% attributes(container, image) do |title, value| %>
+          <button class="p-chip is-dense">
+            <span class="p-chip__lead"><%= title %></span>
+            <% if value.is_a? Time %>
+              <span class="p-chip__value"><time datetime="<%= value.to_iso8601 %>"></time></span>
+            <% else %>
+              <span class="p-chip__value"><%= value %></span>
+            <% end %>
+          </button>
+        <% end %>
+      </div>
+
       <div class="links">
         <% container.links.each do |link| %>
           <a class="p-button <%= button_class(link[0]) %>"
             href="<%= link[1] %>" target=_blank><%= HTML.escape(link[0]) %></a>
         <% end %>
       </div>
+
       <div class="details">
         <div class="p-code-snippet">
           <pre class="p-code-snippet__block--icon"><code><%= HTML.escape info.full_arguments.join('\n') %></code></pre>
@@ -53,7 +54,11 @@
         <div class="p-code-snippet">
           <pre class="p-code-snippet__block--icon"><code><%= HTML.escape info.environment.join('\n') %></code></pre>
         </div>
+      </div>
 
+      <div class="logs">
+        <h4>Logs</h4>
+        <pre><%= logs %></pre>
       </div>
     </div>
     <script>window.onload = () => Array.from(document.querySelectorAll('time')).forEach(
