--- a/src/templates/info.html
+++ b/src/templates/info.html
@@ -58,7 +58,7 @@
 
       <div class="logs">
         <h4>Logs</h4>
-        <pre><%= logs %></pre>
+        <pre><%= HTML.escape(logs) %></pre>
       </div>
     </div>
     <script>window.onload = () => Array.from(document.querySelectorAll('time')).forEach(
