--- a/src/templates/info.html
+++ b/src/templates/info.html
@@ -14,7 +14,7 @@
     <div class="p-card">
       <div class="container-card">
         <h3>
-          <span class="chip <%= status_class(container) %>"><%= status_text(container) %></span>
+          <span class="status_icon"><%= status_text(container) %></span>
           <a href="/info?container=<%= container.id %>&host=<%= container.host.name %>">
             <%= container.name %></a>
           <span class="subtitle">
