--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= title %></title>
-    <link rel="stylesheet" href="/styles.css"/>
+    <link rel="stylesheet" href="/styles.css?v=<%= ASS_VERSION %>"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,6 +14,6 @@
       <h1><a href="/"><%= title %></a></h1>
     </header>
     <%= content %>
-    <script type="text/javascript" async src="/main.js"/> </script>
+    <script type="text/javascript" async src="/main.js?v=<%= ASS_VERSION %>"/> </script>
   </body>
 </html>
